--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "http-errors": "^2.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pdfkit": "^0.13.0"
   }
 }
