--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.15",
-    "pdfkit": "^0.13.0"
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.5"
   }
 }
